<resources>
    <string name="app_name">BARF_API_25_java</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="BreedType">Breed type</string>
    <string name="DogActivityType">Activity type</string>
    <string name="Add">Add</string>
    <string name="Age">Age</string>
    <string name="Name">Name</string>
    <string name="Weight">Weight [kg]</string>
    <string name="DogActivity">Dog activity</string>
    <string name="EditPhoto">Edit Photo</string>
    <string name="DogName">Dog\'s Name</string>
    <string name="NewMeal">New Meal</string>
    <string name="Archive">Archive</string>
    <string name="createMealPlan">How many meals to create?</string>
    <string name="Cancel">Cancel</string>
    <string name="Ok">OK</string>
    <string name="PickImage">Pick image</string>
    <string name="title_activity_settings2">SettingsActivity2</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="Save">Save</string>
    <string name="Edit">Edit</string>
    <string name="AllowedFoods">Allowed foods:</string>
    <string name="TargetWeight">Meal weight:</string>
    <string name="MealProportions">Meal proportions:</string>
    <string name="Meat">Meat</string>
    <string name="Offal">Offal</string>
    <string name="Bone">Bone</string>
    <string name="g">g</string>
    <string name="Reset">Reset</string>
    <string name="Recalculate">Recalculate</string>
    <string name="AppName">BarfApp</string>
</resources>
