<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.DogTab.Settings.SettingsActivity">

    <TextView
        android:id="@+id/tvTargetWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/TargetWeight"
        android:textColor="@color/design_default_color_on_secondary"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/teTargetWeight"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:hint="@string/TargetWeight"
        android:inputType="number"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/tvTargetWeight"
        app:layout_constraintTop_toTopOf="parent" />

    <SeekBar
        android:id="@+id/seekBarMeat"
        android:layout_width="251dp"
        android:layout_height="31dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMealProportions" />

    <SeekBar
        android:id="@+id/seekBarOffal"
        android:layout_width="251dp"
        android:layout_height="31dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBarMeat" />

    <SeekBar
        android:id="@+id/seekBarBone"
        android:layout_width="251dp"
        android:layout_height="31dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBarOffal" />

    <TextView
        android:id="@+id/tvMealProportions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/MealProportions"
        android:textColor="@color/design_default_color_on_secondary"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTargetWeight" />

    <TextView
        android:id="@+id/tvActivityType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="44dp"
        android:text="@string/DogActivity"
        android:textColor="@color/design_default_color_on_secondary"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvBone" />

    <Spinner
        android:id="@+id/spinnerActivityType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toEndOf="@+id/tvActivityType"
        app:layout_constraintTop_toBottomOf="@+id/seekBarBone" />

    <Button
        android:id="@+id/btnEditAllowedFoods"
        android:layout_width="65dp"
        android:layout_height="41dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="12dp"
        android:text="@string/Edit"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/tvAllowedFoods"
        app:layout_constraintTop_toBottomOf="@+id/spinnerActivityType" />

    <Button
        android:id="@+id/btnReserProportions"
        android:layout_width="65dp"
        android:layout_height="41dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:text="@string/Reset"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTargetWeight" />

    <Button
        android:id="@+id/btnRecalculate"
        android:layout_width="65dp"
        android:layout_height="41dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:text="@string/Reset"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvAllowedFoods"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/AllowedFoods"
        android:textColor="@color/design_default_color_on_secondary"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvActivityType" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:text="@string/Save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnEditAllowedFoods" />

    <TextView
        android:id="@+id/tvMeat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="14dp"
        android:text="@string/Meat"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMealProportions" />

    <TextView
        android:id="@+id/tvOffal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="14dp"
        android:text="@string/Offal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBarMeat" />

    <TextView
        android:id="@+id/tvBone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="14dp"
        android:text="@string/Bone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBarOffal" />

    <TextView
        android:id="@+id/tvMeatPercentage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/seekBarMeat"
        app:layout_constraintTop_toBottomOf="@+id/tvMealProportions" />

    <TextView
        android:id="@+id/tvOffalPercentage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/seekBarOffal"
        app:layout_constraintTop_toBottomOf="@+id/seekBarMeat" />

    <TextView
        android:id="@+id/tvBonePercentage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/seekBarBone"
        app:layout_constraintTop_toBottomOf="@+id/seekBarOffal" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/g"
        app:layout_constraintStart_toEndOf="@+id/teTargetWeight"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>