<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.DogTab.DogMainTabActivity">

    <Button
        android:id="@+id/btn_changeImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="116dp"
        android:text="@string/EditPhoto"
        android:textSize="10sp"
        app:layout_constraintStart_toEndOf="@+id/img_dogPhoto"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_NewMeal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="32dp"
        android:text="@string/NewMeal"
        app:layout_constraintEnd_toStartOf="@+id/btn_Archive"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_dogPhoto" />

    <Button
        android:id="@+id/btn_Archive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="100dp"
        android:text="@string/Archive"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_dogPhoto" />

    <ExpandableListView
        android:id="@+id/mealListView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="265dp"
        android:transcriptMode="alwaysScroll"
        android:divider="@android:color/darker_gray"
        android:dividerHeight="0.5dp"
        android:indicatorLeft="?android:attr/expandableListPreferredItemIndicatorLeft"
        app:layout_constraintTop_toBottomOf="@+id/btn_NewMeal" />

    <ImageButton
        android:id="@+id/ibtn_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/settings_ico"
        tools:srcCompat="@drawable/settings_ico" />

    <ImageView
        android:id="@+id/img_dogPhoto"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_launcher_foreground" />

    <TextView
        android:id="@+id/tv_dogName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:text="@string/DogName"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/img_dogPhoto"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>